parser/parsemodules/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BR
    NOT
    PARENTHESE
    STAR
    UNKNOWN

Grammar

Rule 0     S' -> entries
Rule 1     entries -> entry
Rule 2     entries -> entry moreentries
Rule 3     moreentries -> entry
Rule 4     moreentries -> entry moreentries
Rule 5     entry -> SP exp EP
Rule 6     entry -> SP exps EP
Rule 7     entry -> SBQ entries EBQ
Rule 8     exps -> exp
Rule 9     exps -> exp SEP moreexp
Rule 10    moreexp -> exp
Rule 11    moreexp -> exp SEP moreexp
Rule 12    exp -> common
Rule 13    exp -> common_bold
Rule 14    exp -> place
Rule 15    exp -> descriptions
Rule 16    exp -> person
Rule 17    exp -> page
Rule 18    exp -> voirs
Rule 19    common_bold -> SSTRONG words ESTRONG
Rule 20    common -> word
Rule 21    place -> SEM words EEM
Rule 22    place -> SEM words EEM parenthese
Rule 23    person -> SSC word ESC
Rule 24    person -> SSC descriptions ESC
Rule 25    person -> SSC word SEP word ESC
Rule 26    person -> SSC word SEP descriptions ESC
Rule 27    person -> SSC descriptions SEP word ESC
Rule 28    person -> SSC descriptions SEP descriptions ESC
Rule 29    cross -> SPA CROSS EPA
Rule 30    title -> WORD SS WORD ES
Rule 31    page -> numberminus
Rule 32    page -> NUMBERP
Rule 33    page -> NUMBER
Rule 34    numberminus -> NUMBER MINUS NUMBER
Rule 35    numberminus -> NUMBER MINUS NUMBERP
Rule 36    numberminus -> NUMBERP MINUS NUMBER
Rule 37    numberminus -> NUMBERP MINUS NUMBERP
Rule 38    voirs -> VOIR AUSSI rest_voir_aussis
Rule 39    voirs -> VOIR rest_voir_aussis
Rule 40    rest_voir_aussis -> exp
Rule 41    rest_voir_aussis -> exp SEP rest_voir_aussis
Rule 42    type2 -> SSC words ESC
Rule 43    type2 -> SSTRONG words ESTRONG
Rule 44    type2 -> SEM words EEM
Rule 45    type2 -> words
Rule 46    words -> word
Rule 47    words -> word moreword
Rule 48    words -> word SEP moreword
Rule 49    moreword -> word
Rule 50    moreword -> word moreword
Rule 51    moreword -> word SEP moreword
Rule 52    word -> WORD
Rule 53    word -> parenthese
Rule 54    parenthese -> SPA parenthesecontents EPA
Rule 55    parenthese -> SSB parenthesecontents ESB
Rule 56    parenthese -> SPA voirs EPA
Rule 57    parenthesecontents -> parenthesecontent
Rule 58    parenthesecontents -> parenthesecontent moreparenthesecontent
Rule 59    moreparenthesecontent -> parenthesecontent
Rule 60    moreparenthesecontent -> parenthesecontent moreparenthesecontent
Rule 61    parenthesecontent -> words
Rule 62    parenthesecontent -> DOT
Rule 63    parenthesecontent -> SEP
Rule 64    parenthesecontent -> MINUS
Rule 65    parenthesecontent -> APOSTROPHE
Rule 66    parenthesecontent -> NUMBER
Rule 67    descriptions -> description
Rule 68    descriptions -> description moredescription
Rule 69    moredescription -> description
Rule 70    moredescription -> description moredescription
Rule 71    description -> WORD
Rule 72    description -> SLASH
Rule 73    description -> cross
Rule 74    description -> title
Rule 75    description -> MINUS
Rule 76    description -> APOSTROPHE
Rule 77    description -> parenthese

Terminals, with rules where they appear

APOSTROPHE           : 65 76
AUSSI                : 38
BR                   : 
CROSS                : 29
DOT                  : 62
EBQ                  : 7
EEM                  : 21 22 44
EP                   : 5 6
EPA                  : 29 54 56
ES                   : 30
ESB                  : 55
ESC                  : 23 24 25 26 27 28 42
ESTRONG              : 19 43
MINUS                : 34 35 36 37 64 75
NOT                  : 
NUMBER               : 33 34 34 35 36 66
NUMBERP              : 32 35 36 37 37
PARENTHESE           : 
SBQ                  : 7
SEM                  : 21 22 44
SEP                  : 9 11 25 26 27 28 41 48 51 63
SLASH                : 72
SP                   : 5 6
SPA                  : 29 54 56
SS                   : 30
SSB                  : 55
SSC                  : 23 24 25 26 27 28 42
SSTRONG              : 19 43
STAR                 : 
UNKNOWN              : 
VOIR                 : 38 39
WORD                 : 30 30 52 71
error                : 

Nonterminals, with rules where they appear

common               : 12
common_bold          : 13
cross                : 73
description          : 67 68 69 70
descriptions         : 15 24 26 27 28 28
entries              : 7 0
entry                : 1 2 3 4
exp                  : 5 8 9 10 11 40 41
exps                 : 6
moredescription      : 68 70
moreentries          : 2 4
moreexp              : 9 11
moreparenthesecontent : 58 60
moreword             : 47 48 50 51
numberminus          : 31
page                 : 17
parenthese           : 22 53 77
parenthesecontent    : 57 58 59 60
parenthesecontents   : 54 55
person               : 16
place                : 14
rest_voir_aussis     : 38 39 41
title                : 74
type2                : 
voirs                : 18 56
word                 : 20 23 25 25 26 27 46 47 48 49 50 51
words                : 19 21 22 42 43 44 45 61

Parsing method: LALR

state 0

    (0) S' -> . entries
    (1) entries -> . entry
    (2) entries -> . entry moreentries
    (5) entry -> . SP exp EP
    (6) entry -> . SP exps EP
    (7) entry -> . SBQ entries EBQ

    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entries                        shift and go to state 1
    entry                          shift and go to state 2

state 1

    (0) S' -> entries .



state 2

    (1) entries -> entry .
    (2) entries -> entry . moreentries
    (3) moreentries -> . entry
    (4) moreentries -> . entry moreentries
    (5) entry -> . SP exp EP
    (6) entry -> . SP exps EP
    (7) entry -> . SBQ entries EBQ

    $end            reduce using rule 1 (entries -> entry .)
    EBQ             reduce using rule 1 (entries -> entry .)
    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entry                          shift and go to state 5
    moreentries                    shift and go to state 6

state 3

    (5) entry -> SP . exp EP
    (6) entry -> SP . exps EP
    (12) exp -> . common
    (13) exp -> . common_bold
    (14) exp -> . place
    (15) exp -> . descriptions
    (16) exp -> . person
    (17) exp -> . page
    (18) exp -> . voirs
    (8) exps -> . exp
    (9) exps -> . exp SEP moreexp
    (20) common -> . word
    (19) common_bold -> . SSTRONG words ESTRONG
    (21) place -> . SEM words EEM
    (22) place -> . SEM words EEM parenthese
    (67) descriptions -> . description
    (68) descriptions -> . description moredescription
    (23) person -> . SSC word ESC
    (24) person -> . SSC descriptions ESC
    (25) person -> . SSC word SEP word ESC
    (26) person -> . SSC word SEP descriptions ESC
    (27) person -> . SSC descriptions SEP word ESC
    (28) person -> . SSC descriptions SEP descriptions ESC
    (31) page -> . numberminus
    (32) page -> . NUMBERP
    (33) page -> . NUMBER
    (38) voirs -> . VOIR AUSSI rest_voir_aussis
    (39) voirs -> . VOIR rest_voir_aussis
    (52) word -> . WORD
    (53) word -> . parenthese
    (71) description -> . WORD
    (72) description -> . SLASH
    (73) description -> . cross
    (74) description -> . title
    (75) description -> . MINUS
    (76) description -> . APOSTROPHE
    (77) description -> . parenthese
    (34) numberminus -> . NUMBER MINUS NUMBER
    (35) numberminus -> . NUMBER MINUS NUMBERP
    (36) numberminus -> . NUMBERP MINUS NUMBER
    (37) numberminus -> . NUMBERP MINUS NUMBERP
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA
    (29) cross -> . SPA CROSS EPA
    (30) title -> . WORD SS WORD ES

    SSTRONG         shift and go to state 17
    SEM             shift and go to state 18
    SSC             shift and go to state 21
    NUMBERP         shift and go to state 23
    NUMBER          shift and go to state 24
    VOIR            shift and go to state 25
    WORD            shift and go to state 26
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 32
    SSB             shift and go to state 33

    exp                            shift and go to state 7
    exps                           shift and go to state 8
    common                         shift and go to state 9
    common_bold                    shift and go to state 10
    place                          shift and go to state 11
    descriptions                   shift and go to state 12
    person                         shift and go to state 13
    page                           shift and go to state 14
    voirs                          shift and go to state 15
    word                           shift and go to state 16
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    numberminus                    shift and go to state 22
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 4

    (7) entry -> SBQ . entries EBQ
    (1) entries -> . entry
    (2) entries -> . entry moreentries
    (5) entry -> . SP exp EP
    (6) entry -> . SP exps EP
    (7) entry -> . SBQ entries EBQ

    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entries                        shift and go to state 34
    entry                          shift and go to state 2

state 5

    (3) moreentries -> entry .
    (4) moreentries -> entry . moreentries
    (3) moreentries -> . entry
    (4) moreentries -> . entry moreentries
    (5) entry -> . SP exp EP
    (6) entry -> . SP exps EP
    (7) entry -> . SBQ entries EBQ

    $end            reduce using rule 3 (moreentries -> entry .)
    EBQ             reduce using rule 3 (moreentries -> entry .)
    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entry                          shift and go to state 5
    moreentries                    shift and go to state 35

state 6

    (2) entries -> entry moreentries .

    $end            reduce using rule 2 (entries -> entry moreentries .)
    EBQ             reduce using rule 2 (entries -> entry moreentries .)


state 7

    (5) entry -> SP exp . EP
    (8) exps -> exp .
    (9) exps -> exp . SEP moreexp

  ! shift/reduce conflict for EP resolved as shift
    EP              shift and go to state 36
    SEP             shift and go to state 37

  ! EP              [ reduce using rule 8 (exps -> exp .) ]


state 8

    (6) entry -> SP exps . EP

    EP              shift and go to state 38


state 9

    (12) exp -> common .

    EP              reduce using rule 12 (exp -> common .)
    SEP             reduce using rule 12 (exp -> common .)
    EPA             reduce using rule 12 (exp -> common .)


state 10

    (13) exp -> common_bold .

    EP              reduce using rule 13 (exp -> common_bold .)
    SEP             reduce using rule 13 (exp -> common_bold .)
    EPA             reduce using rule 13 (exp -> common_bold .)


state 11

    (14) exp -> place .

    EP              reduce using rule 14 (exp -> place .)
    SEP             reduce using rule 14 (exp -> place .)
    EPA             reduce using rule 14 (exp -> place .)


state 12

    (15) exp -> descriptions .

    EP              reduce using rule 15 (exp -> descriptions .)
    SEP             reduce using rule 15 (exp -> descriptions .)
    EPA             reduce using rule 15 (exp -> descriptions .)


state 13

    (16) exp -> person .

    EP              reduce using rule 16 (exp -> person .)
    SEP             reduce using rule 16 (exp -> person .)
    EPA             reduce using rule 16 (exp -> person .)


state 14

    (17) exp -> page .

    EP              reduce using rule 17 (exp -> page .)
    SEP             reduce using rule 17 (exp -> page .)
    EPA             reduce using rule 17 (exp -> page .)


state 15

    (18) exp -> voirs .

    EP              reduce using rule 18 (exp -> voirs .)
    SEP             reduce using rule 18 (exp -> voirs .)
    EPA             reduce using rule 18 (exp -> voirs .)


state 16

    (20) common -> word .

    EP              reduce using rule 20 (common -> word .)
    SEP             reduce using rule 20 (common -> word .)
    EPA             reduce using rule 20 (common -> word .)


state 17

    (19) common_bold -> SSTRONG . words ESTRONG
    (46) words -> . word
    (47) words -> . word moreword
    (48) words -> . word SEP moreword
    (52) word -> . WORD
    (53) word -> . parenthese
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA

    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    words                          shift and go to state 39
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 18

    (21) place -> SEM . words EEM
    (22) place -> SEM . words EEM parenthese
    (46) words -> . word
    (47) words -> . word moreword
    (48) words -> . word SEP moreword
    (52) word -> . WORD
    (53) word -> . parenthese
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA

    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    words                          shift and go to state 44
    parenthese                     shift and go to state 42
    word                           shift and go to state 40

state 19

    (53) word -> parenthese .
    (77) description -> parenthese .

  ! reduce/reduce conflict for EP resolved using rule 53 (word -> parenthese .)
  ! reduce/reduce conflict for SEP resolved using rule 53 (word -> parenthese .)
  ! reduce/reduce conflict for ESC resolved using rule 53 (word -> parenthese .)
  ! reduce/reduce conflict for EPA resolved using rule 53 (word -> parenthese .)
    EP              reduce using rule 53 (word -> parenthese .)
    SEP             reduce using rule 53 (word -> parenthese .)
    ESC             reduce using rule 53 (word -> parenthese .)
    EPA             reduce using rule 53 (word -> parenthese .)
    WORD            reduce using rule 77 (description -> parenthese .)
    SLASH           reduce using rule 77 (description -> parenthese .)
    MINUS           reduce using rule 77 (description -> parenthese .)
    APOSTROPHE      reduce using rule 77 (description -> parenthese .)
    SPA             reduce using rule 77 (description -> parenthese .)
    SSB             reduce using rule 77 (description -> parenthese .)

  ! EP              [ reduce using rule 77 (description -> parenthese .) ]
  ! SEP             [ reduce using rule 77 (description -> parenthese .) ]
  ! ESC             [ reduce using rule 77 (description -> parenthese .) ]
  ! EPA             [ reduce using rule 77 (description -> parenthese .) ]


state 20

    (67) descriptions -> description .
    (68) descriptions -> description . moredescription
    (69) moredescription -> . description
    (70) moredescription -> . description moredescription
    (71) description -> . WORD
    (72) description -> . SLASH
    (73) description -> . cross
    (74) description -> . title
    (75) description -> . MINUS
    (76) description -> . APOSTROPHE
    (77) description -> . parenthese
    (29) cross -> . SPA CROSS EPA
    (30) title -> . WORD SS WORD ES
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA

    EP              reduce using rule 67 (descriptions -> description .)
    SEP             reduce using rule 67 (descriptions -> description .)
    ESC             reduce using rule 67 (descriptions -> description .)
    EPA             reduce using rule 67 (descriptions -> description .)
    WORD            shift and go to state 47
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 49
    SSB             shift and go to state 33

    description                    shift and go to state 45
    moredescription                shift and go to state 46
    cross                          shift and go to state 28
    title                          shift and go to state 29
    parenthese                     shift and go to state 48

state 21

    (23) person -> SSC . word ESC
    (24) person -> SSC . descriptions ESC
    (25) person -> SSC . word SEP word ESC
    (26) person -> SSC . word SEP descriptions ESC
    (27) person -> SSC . descriptions SEP word ESC
    (28) person -> SSC . descriptions SEP descriptions ESC
    (52) word -> . WORD
    (53) word -> . parenthese
    (67) descriptions -> . description
    (68) descriptions -> . description moredescription
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA
    (71) description -> . WORD
    (72) description -> . SLASH
    (73) description -> . cross
    (74) description -> . title
    (75) description -> . MINUS
    (76) description -> . APOSTROPHE
    (77) description -> . parenthese
    (29) cross -> . SPA CROSS EPA
    (30) title -> . WORD SS WORD ES

    WORD            shift and go to state 26
    SPA             shift and go to state 32
    SSB             shift and go to state 33
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31

    word                           shift and go to state 50
    descriptions                   shift and go to state 51
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 22

    (31) page -> numberminus .

    EP              reduce using rule 31 (page -> numberminus .)
    SEP             reduce using rule 31 (page -> numberminus .)
    EPA             reduce using rule 31 (page -> numberminus .)


state 23

    (32) page -> NUMBERP .
    (36) numberminus -> NUMBERP . MINUS NUMBER
    (37) numberminus -> NUMBERP . MINUS NUMBERP

    EP              reduce using rule 32 (page -> NUMBERP .)
    SEP             reduce using rule 32 (page -> NUMBERP .)
    EPA             reduce using rule 32 (page -> NUMBERP .)
    MINUS           shift and go to state 52


state 24

    (33) page -> NUMBER .
    (34) numberminus -> NUMBER . MINUS NUMBER
    (35) numberminus -> NUMBER . MINUS NUMBERP

    EP              reduce using rule 33 (page -> NUMBER .)
    SEP             reduce using rule 33 (page -> NUMBER .)
    EPA             reduce using rule 33 (page -> NUMBER .)
    MINUS           shift and go to state 53


state 25

    (38) voirs -> VOIR . AUSSI rest_voir_aussis
    (39) voirs -> VOIR . rest_voir_aussis
    (40) rest_voir_aussis -> . exp
    (41) rest_voir_aussis -> . exp SEP rest_voir_aussis
    (12) exp -> . common
    (13) exp -> . common_bold
    (14) exp -> . place
    (15) exp -> . descriptions
    (16) exp -> . person
    (17) exp -> . page
    (18) exp -> . voirs
    (20) common -> . word
    (19) common_bold -> . SSTRONG words ESTRONG
    (21) place -> . SEM words EEM
    (22) place -> . SEM words EEM parenthese
    (67) descriptions -> . description
    (68) descriptions -> . description moredescription
    (23) person -> . SSC word ESC
    (24) person -> . SSC descriptions ESC
    (25) person -> . SSC word SEP word ESC
    (26) person -> . SSC word SEP descriptions ESC
    (27) person -> . SSC descriptions SEP word ESC
    (28) person -> . SSC descriptions SEP descriptions ESC
    (31) page -> . numberminus
    (32) page -> . NUMBERP
    (33) page -> . NUMBER
    (38) voirs -> . VOIR AUSSI rest_voir_aussis
    (39) voirs -> . VOIR rest_voir_aussis
    (52) word -> . WORD
    (53) word -> . parenthese
    (71) description -> . WORD
    (72) description -> . SLASH
    (73) description -> . cross
    (74) description -> . title
    (75) description -> . MINUS
    (76) description -> . APOSTROPHE
    (77) description -> . parenthese
    (34) numberminus -> . NUMBER MINUS NUMBER
    (35) numberminus -> . NUMBER MINUS NUMBERP
    (36) numberminus -> . NUMBERP MINUS NUMBER
    (37) numberminus -> . NUMBERP MINUS NUMBERP
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA
    (29) cross -> . SPA CROSS EPA
    (30) title -> . WORD SS WORD ES

    AUSSI           shift and go to state 54
    SSTRONG         shift and go to state 17
    SEM             shift and go to state 18
    SSC             shift and go to state 21
    NUMBERP         shift and go to state 23
    NUMBER          shift and go to state 24
    VOIR            shift and go to state 25
    WORD            shift and go to state 26
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 32
    SSB             shift and go to state 33

    rest_voir_aussis               shift and go to state 55
    exp                            shift and go to state 56
    common                         shift and go to state 9
    common_bold                    shift and go to state 10
    place                          shift and go to state 11
    descriptions                   shift and go to state 12
    person                         shift and go to state 13
    page                           shift and go to state 14
    voirs                          shift and go to state 15
    word                           shift and go to state 16
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    numberminus                    shift and go to state 22
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 26

    (52) word -> WORD .
    (71) description -> WORD .
    (30) title -> WORD . SS WORD ES

  ! reduce/reduce conflict for EP resolved using rule 52 (word -> WORD .)
  ! reduce/reduce conflict for SEP resolved using rule 52 (word -> WORD .)
  ! reduce/reduce conflict for ESC resolved using rule 52 (word -> WORD .)
  ! reduce/reduce conflict for EPA resolved using rule 52 (word -> WORD .)
    EP              reduce using rule 52 (word -> WORD .)
    SEP             reduce using rule 52 (word -> WORD .)
    ESC             reduce using rule 52 (word -> WORD .)
    EPA             reduce using rule 52 (word -> WORD .)
    WORD            reduce using rule 71 (description -> WORD .)
    SLASH           reduce using rule 71 (description -> WORD .)
    MINUS           reduce using rule 71 (description -> WORD .)
    APOSTROPHE      reduce using rule 71 (description -> WORD .)
    SPA             reduce using rule 71 (description -> WORD .)
    SSB             reduce using rule 71 (description -> WORD .)
    SS              shift and go to state 57

  ! EP              [ reduce using rule 71 (description -> WORD .) ]
  ! SEP             [ reduce using rule 71 (description -> WORD .) ]
  ! ESC             [ reduce using rule 71 (description -> WORD .) ]
  ! EPA             [ reduce using rule 71 (description -> WORD .) ]


state 27

    (72) description -> SLASH .

    WORD            reduce using rule 72 (description -> SLASH .)
    SLASH           reduce using rule 72 (description -> SLASH .)
    MINUS           reduce using rule 72 (description -> SLASH .)
    APOSTROPHE      reduce using rule 72 (description -> SLASH .)
    SPA             reduce using rule 72 (description -> SLASH .)
    SSB             reduce using rule 72 (description -> SLASH .)
    EP              reduce using rule 72 (description -> SLASH .)
    SEP             reduce using rule 72 (description -> SLASH .)
    ESC             reduce using rule 72 (description -> SLASH .)
    EPA             reduce using rule 72 (description -> SLASH .)


state 28

    (73) description -> cross .

    WORD            reduce using rule 73 (description -> cross .)
    SLASH           reduce using rule 73 (description -> cross .)
    MINUS           reduce using rule 73 (description -> cross .)
    APOSTROPHE      reduce using rule 73 (description -> cross .)
    SPA             reduce using rule 73 (description -> cross .)
    SSB             reduce using rule 73 (description -> cross .)
    EP              reduce using rule 73 (description -> cross .)
    SEP             reduce using rule 73 (description -> cross .)
    ESC             reduce using rule 73 (description -> cross .)
    EPA             reduce using rule 73 (description -> cross .)


state 29

    (74) description -> title .

    WORD            reduce using rule 74 (description -> title .)
    SLASH           reduce using rule 74 (description -> title .)
    MINUS           reduce using rule 74 (description -> title .)
    APOSTROPHE      reduce using rule 74 (description -> title .)
    SPA             reduce using rule 74 (description -> title .)
    SSB             reduce using rule 74 (description -> title .)
    EP              reduce using rule 74 (description -> title .)
    SEP             reduce using rule 74 (description -> title .)
    ESC             reduce using rule 74 (description -> title .)
    EPA             reduce using rule 74 (description -> title .)


state 30

    (75) description -> MINUS .

    WORD            reduce using rule 75 (description -> MINUS .)
    SLASH           reduce using rule 75 (description -> MINUS .)
    MINUS           reduce using rule 75 (description -> MINUS .)
    APOSTROPHE      reduce using rule 75 (description -> MINUS .)
    SPA             reduce using rule 75 (description -> MINUS .)
    SSB             reduce using rule 75 (description -> MINUS .)
    EP              reduce using rule 75 (description -> MINUS .)
    SEP             reduce using rule 75 (description -> MINUS .)
    ESC             reduce using rule 75 (description -> MINUS .)
    EPA             reduce using rule 75 (description -> MINUS .)


state 31

    (76) description -> APOSTROPHE .

    WORD            reduce using rule 76 (description -> APOSTROPHE .)
    SLASH           reduce using rule 76 (description -> APOSTROPHE .)
    MINUS           reduce using rule 76 (description -> APOSTROPHE .)
    APOSTROPHE      reduce using rule 76 (description -> APOSTROPHE .)
    SPA             reduce using rule 76 (description -> APOSTROPHE .)
    SSB             reduce using rule 76 (description -> APOSTROPHE .)
    EP              reduce using rule 76 (description -> APOSTROPHE .)
    SEP             reduce using rule 76 (description -> APOSTROPHE .)
    ESC             reduce using rule 76 (description -> APOSTROPHE .)
    EPA             reduce using rule 76 (description -> APOSTROPHE .)


state 32

    (54) parenthese -> SPA . parenthesecontents EPA
    (56) parenthese -> SPA . voirs EPA
    (29) cross -> SPA . CROSS EPA
    (57) parenthesecontents -> . parenthesecontent
    (58) parenthesecontents -> . parenthesecontent moreparenthesecontent
    (38) voirs -> . VOIR AUSSI rest_voir_aussis
    (39) voirs -> . VOIR rest_voir_aussis
    (61) parenthesecontent -> . words
    (62) parenthesecontent -> . DOT
    (63) parenthesecontent -> . SEP
    (64) parenthesecontent -> . MINUS
    (65) parenthesecontent -> . APOSTROPHE
    (66) parenthesecontent -> . NUMBER
    (46) words -> . word
    (47) words -> . word moreword
    (48) words -> . word SEP moreword
    (52) word -> . WORD
    (53) word -> . parenthese
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA

    CROSS           shift and go to state 60
    VOIR            shift and go to state 25
    DOT             shift and go to state 63
    SEP             shift and go to state 64
    MINUS           shift and go to state 65
    APOSTROPHE      shift and go to state 66
    NUMBER          shift and go to state 67
    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    parenthesecontents             shift and go to state 58
    voirs                          shift and go to state 59
    parenthesecontent              shift and go to state 61
    words                          shift and go to state 62
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 33

    (55) parenthese -> SSB . parenthesecontents ESB
    (57) parenthesecontents -> . parenthesecontent
    (58) parenthesecontents -> . parenthesecontent moreparenthesecontent
    (61) parenthesecontent -> . words
    (62) parenthesecontent -> . DOT
    (63) parenthesecontent -> . SEP
    (64) parenthesecontent -> . MINUS
    (65) parenthesecontent -> . APOSTROPHE
    (66) parenthesecontent -> . NUMBER
    (46) words -> . word
    (47) words -> . word moreword
    (48) words -> . word SEP moreword
    (52) word -> . WORD
    (53) word -> . parenthese
    (54) parenthese -> . SPA parenthesecontents EPA
    (55) parenthese -> . SSB parenthesecontents ESB
    (56) parenthese -> . SPA voirs EPA

    DOT             shift and go to state 63
    SEP             shift and go to state 64
    MINUS           shift and go to state 65
    APOSTROPHE      shift and go to state 66
    NUMBER          shift and go to state 67
    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    parenthesecontents             shift and go to state 68
    parenthesecontent              shift and go to state 61
    words                          shift and go to state 62
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 34

    (7) entry -> SBQ entries . EBQ

    EBQ             shift and go to state 69


state 35

    (4) moreentries -> entry moreentries .

    $end            reduce using rule 4 (moreentries -> entry moreentries .)
    EBQ             reduce using rule 4 (moreentries -> entry moreentries .)


state 36

    (5) entry -> SP exp EP .

    SP              reduce using rule 5 (entry -> SP exp EP .)
    SBQ             reduce using rule 5 (entry -> SP exp EP .)
    $end            reduce using rule 5 (entry -> SP exp EP .)
    EBQ             reduce using rule 5 (entry -> SP exp EP .)


state 37
